--- a/kubernetes/apps/home/rtlamr2mqtt/app/helmrelease.yaml
+++ b/kubernetes/apps/home/rtlamr2mqtt/app/helmrelease.yaml
@@ -22,7 +22,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             image:
               repository: docker.io/allangood/rtlamr2mqtt
               tag: 2025.6.6
