--- a/kubernetes/apps/home/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/apps/home/zwave-js-ui/app/helmrelease.yaml
@@ -22,7 +22,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             image:
               repository: zwavejs/zwave-js-ui
               tag: 11.2.1@sha256:7fc0a78a6c843654eb93166decd13192b5a1f53637cf117ea13569f2a33a0e94
@@ -59,7 +59,7 @@ spec:
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
     service:
-      main:
+      app:
         ports:
           http:
             port: *port
