--- a/kubernetes/apps/home/homeassistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home/homeassistant/app/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/home-operations/home-assistant
               tag: 2025.9.1@sha256:fe188478864988a04274743529685ad2f15dd3bb0041096a79dbe5a7b5ebc770
@@ -86,7 +86,7 @@ spec:
                 "mac": "3e:59:e4:f7:43:10"
               }]
     service:
-      main:
+      app:
         ports:
           http:
             port: *port
@@ -95,7 +95,7 @@ spec:
           http:
             port: *code-port
     route:
-      *app :
+      app:
         hostnames: ["hass.noms.tv"]
         parentRefs:
           - name: envoy
