--- a/kubernetes/apps/home/mosquitto/app/helmrelease.yaml
+++ b/kubernetes/apps/home/mosquitto/app/helmrelease.yaml
@@ -22,7 +22,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             image:
               repository: eclipse-mosquitto
               tag: 2.0.22
@@ -41,7 +41,7 @@ spec:
               limits:
                 memory: 512Mi
     service:
-      main:
+      app:
         type: LoadBalancer
         annotations:
           lbipam.cilium.io/ips: 172.16.1.74, ::ffff:172.16.1.74
