--- a/kubernetes/apps/media/sonarr/kids/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/kids/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: sonarr-kids
+  name: &app sonarr-kids
 spec:
   interval: 30m
   chartRef:
@@ -18,7 +18,7 @@ spec:
       retries: 3
   values:
     controllers:
-      sonarr-kids:
+      *app :
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
@@ -38,7 +38,7 @@ spec:
               TZ: America/New_York
             envFrom:
               - secretRef:
-                  name: "{{ .Release.Name }}"
+                  name: *app
             probes:
               liveness: &probes
                 enabled: true
