--- a/kubernetes/apps/media/music-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/media/music-assistant/app/helmrelease.yaml
@@ -4,7 +4,6 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: &app music-assistant
-  dnsname: music
 spec:
   interval: 30m
   chartRef:
@@ -73,7 +72,7 @@ spec:
     route:
       app:
         hostnames:
-          - "{{ .Release.Dnsname }}.noms.tv"
+          - "music.noms.tv"
         parentRefs:
           - name: envoy
             namespace: network
