--- a/kubernetes/apps/media/watchstate/app/helmrelease.yaml
+++ b/kubernetes/apps/media/watchstate/app/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
           app:
             image:
               repository: ghcr.io/arabcoders/watchstate
-              tag: master@sha256:422f45042510fe3cbe8aa86b24320b96d592135b0a7c23e67ac1d425f1ce2cfc
+              tag: v0.4.2@sha256:509a7fd3031503693dfb438190594448bef47f416d62326dd32a625f8a3bc8ff
             probes:
               liveness: &probes
                 enabled: true
