--- a/kubernetes/apps/default/puter/app/helmrelease.yaml
+++ b/kubernetes/apps/default/puter/app/helmrelease.yaml
@@ -31,6 +31,7 @@ spec:
               TZ: America/New_York
               PUID: 1000
               PGID: 1000
+              PORT: &port 4100
             probes:
               liveness: &probes
                 enabled: true
