fix: Add temp opt directory

--- a/kubernetes/apps/default/puter/app/helmrelease.yaml
+++ b/kubernetes/apps/default/puter/app/helmrelease.yaml
@@ -83,3 +83,7 @@ spec:
             subPath: config
           - path: /var/puter
             subPath: data
+      tmpfs:
+        type: emptyDir
+        globalMounts:
+          - path: /opt
