--- a/kubernetes/apps/home/homeassistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home/homeassistant/app/helmrelease.yaml
@@ -18,6 +18,14 @@ spec:
       retries: 3
   values:
     defaultPodOptions:
+      annotations:
+        k8s.v1.cni.cncf.io/networks: |-
+          [{
+            "name":"iot",
+            "namespace": "kube-system",
+            "ips": ["172.16.3.4/24"],
+            "mac": "3e:59:e4:f7:43:10"
+          }]
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
@@ -49,74 +57,29 @@ spec:
               readiness: *probes
               startup: *probes
             resources:
+              requests:
+                cpu: 10m
               limits:
                 memory: 4Gi
-          code-server:
-            image:
-              repository: ghcr.io/coder/code-server
-              tag: 4.103.2@sha256:f9ed058d6b1a4aa80846f77902d344bd97e450aec69201a0f8939baf58b18a5f
-            args: [
-              "--auth", "none",
-              "--user-data-dir", "/config/.vscode",
-              "--extensions-dir", "/config/.vscode",
-              "--port", "12321",
-              "/config"
-            ]
-            probes:
-              liveness: &code-probes
-                enabled: true
-                custom: true
-                spec:
-                  tcpSocket:
-                    port: &code-port 12321
-                  failureThreshold: 6
-                  periodSeconds: 10
-              readiness: *code-probes
-              startup: *code-probes
-            resources:
-              limits:
-                memory: 512Mi
-        pod:
-          annotations:
-            k8s.v1.cni.cncf.io/networks: |
-              [{
-                "name":"iot",
-                "namespace": "kube-system",
-                "ips": ["172.16.3.4/24"],
-                "mac": "3e:59:e4:f7:43:10"
-              }]
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities: {drop: ["ALL"]}
     service:
       app:
-        forceRename: *app
-        primary: true
         ports:
           http:
+            appProtocol: kubernetes.io/ws
             port: *port
-      code-server:
-        ports:
-          http:
-            port: *code-port
     route:
       app:
-        hostnames: ["hass.noms.tv"]
+        hostnames:
+          - "{{ .Release.Name }}.noms.tv"
+          - hass.noms.tv
         parentRefs:
           - name: envoy
             namespace: network
             sectionName: https
-        rules:
-          - backendRefs:
-              - name: *app
-                port: *port
-      code:
-        hostnames: ["hass-code.noms.tv"]
-        parentRefs:
-          - name: envoy
-            namespace: network
-            sectionName: https
-        rules:
-          - backendRefs:
-              - name: code-server
-                port: *code-port
     persistence:
       config:
         existingClaim: *app
