chore: Mealie auto SSO

--- a/kubernetes/apps/default/mealie/app/externalsecret.yaml
+++ b/kubernetes/apps/default/mealie/app/externalsecret.yaml
@@ -35,7 +35,7 @@ spec:
         OIDC_CONFIGURATION_URL: "{{ .OIDCConfigUrl }}"
         OIDC_CLIENT_ID: "{{ .OIDCClientID }}"
         OIDC_CLIENT_SECRET: "{{ .OIDCClientSecret }}"
-        OIDC_AUTO_REDIRECT: "false"
+        OIDC_AUTO_REDIRECT: "True"
         OIDC_PROVIDER_NAME: "Authentik"
         OIDC_REMEMBER_ME: "true"
         OIDC_ADMIN_GROUP: "{{ .OIDCAdminGroup }}"
