chore: Move Alertmanager to Envoy

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -43,8 +43,8 @@ spec:
           enabled: true
           hostnames: ["alertmanager.noms.tv"]
           parentRefs:
-            - name: internal
-              namespace: kube-system
+            - name: envoy
+              namespace: network
               sectionName: https
       alertmanagerSpec:
         alertmanagerConfiguration:
