--- a/talos/patches/cluster.yaml
+++ b/talos/patches/cluster.yaml
@@ -17,7 +17,7 @@ cluster:
         - level: Metadata
     extraArgs:
       feature-gates: MutatingAdmissionPolicy=true
-      runtime-config: admissionregistration.k8s.io/v1alpha1=true
+      runtime-config: admissionregistration.k8s.io/v1beta1=true
   scheduler:
     extraArgs:
       bind-address: 0.0.0.0
