--- a/kubernetes/apps/default/puter/app/helmrelease.yaml
+++ b/kubernetes/apps/default/puter/app/helmrelease.yaml
@@ -70,7 +70,7 @@ spec:
       app:
         hostnames:
           - "{{ .Release.Name }}.noms.tv"
-          - "api.noms.tv"
+          - "api.{{ .Release.Name }}.noms.tv"
         parentRefs:
           - name: envoy
             namespace: network
