--- a/kubernetes/apps/kube-system/cilium/app/networking.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/networking.yaml
@@ -3,7 +3,7 @@
 apiVersion: cilium.io/v2alpha1
 kind: CiliumLoadBalancerIPPool
 metadata:
-  name: l2-pool-services
+  name: pool
 spec:
   allowFirstLastIPs: "Yes"
   blocks:
@@ -21,7 +21,7 @@ metadata:
   name: l2-policy
 spec:
   loadBalancerIPs: true
-  interfaces: ["^br.*"]
+  interfaces: ["^bond.*"]
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
