--- a/kubernetes/apps/kube-system/cilium/app/networking.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/networking.yaml
@@ -1,75 +1,77 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumloadbalancerippool_v2alpha1.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumloadbalancerippool_v2.json
 apiVersion: cilium.io/v2
 kind: CiliumLoadBalancerIPPool
 metadata:
   name: pool
 spec:
-  allowFirstLastIPs: "Yes"
+  allowFirstLastIPs: "No"
   blocks:
-    - start: 172.16.0.70
-      stop: 172.16.0.100
-    - start: 172.16.1.70
-      stop: 172.16.1.100
-    - start: 172.16.3.70
-      stop: 172.16.3.100
+    - cidr: 172.16.0.0/24
+    - cidr: 172.16.1.0/24
+    - cidr: 172.16.3.0/24
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliuml2announcementpolicy_v2alpha1.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumbgpadvertisement_v2.json
 apiVersion: cilium.io/v2
-kind: CiliumL2AnnouncementPolicy
+kind: CiliumBGPAdvertisement
 metadata:
-  name: l2-policy
+  name: l3-bgp-advertisement
+  labels:
+    advertise: bgp
 spec:
-  loadBalancerIPs: true
-  interfaces: ["^bond.*"]
+  advertisements:
+    - advertisementType: Service
+      service:
+        addresses:
+          - LoadBalancerIP
+      selector:
+        matchExpressions:
+          - {key: somekey, operator: NotIn, values: ["never-used-value"]}
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumbgppeerconfig_v2.json
+apiVersion: cilium.io/v2
+kind: CiliumBGPPeerConfig
+metadata:
+  name: l3-bgp-peer-config
+spec:
+  families:
+    - afi: ipv4
+      safi: unicast
+      advertisements:
+        matchLabels:
+          advertise: bgp
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumbgpclusterconfig_v2.json
+apiVersion: cilium.io/v2
+kind: CiliumBGPClusterConfig
+metadata:
+  name: l3-bgp-cluster-config
+spec:
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
-# ---
-# # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumbgpadvertisement_v2alpha1.json
-# apiVersion: cilium.io/v2
-# kind: CiliumBGPAdvertisement
-# metadata:
-#   name: l3-bgp-advertisement
-#   labels:
-#     advertise: bgp
-# spec:
-#   advertisements:
-#     - advertisementType: Service
-#       service:
-#         addresses: ["LoadBalancerIP"]
-#       selector:
-#         matchExpressions:
-#           - { key: somekey, operator: NotIn, values: ["never-used-value"] }
-# ---
-# # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumbgppeerconfig_v2alpha1.json
-# apiVersion: cilium.io/v2
-# kind: CiliumBGPPeerConfig
-# metadata:
-#   name: l3-bgp-peer-config
-# spec:
-#   families:
-#     - afi: ipv4
-#       safi: unicast
-#       advertisements:
-#         matchLabels:
-#           advertise: bgp
-# ---
-# # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumbgpclusterconfig_v2alpha1.json
-# apiVersion: cilium.io/v2
-# kind: CiliumBGPClusterConfig
-# metadata:
-#   name: l3-bgp-cluster-config
-# spec:
-#   nodeSelector:
-#     matchLabels:
-#       kubernetes.io/os: linux
-#   bgpInstances:
-#     - name: cilium
-#       localASN: 64514
-#       peers:
-#         - name: unifi
-#           peerASN: 64513
-#           peerAddress: 192.168.1.1
-#           peerConfigRef:
-#             name: l3-bgp-peer-config
+  bgpInstances:
+    - name: cilium
+      localASN: 64514
+      peers:
+        - name: unifi
+          peerASN: 64513
+          peerAddress: 172.16.0.1
+          peerConfigRef:
+            name: l3-bgp-peer-config
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kube-api
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: bgp-k8s.noms.tv
+    lbipam.cilium.io/ips: 172.16.0.49
+spec:
+  type: LoadBalancer
+  externalTrafficPolicy: Local
+  selector:
+    k8s-app: kube-apiserver
+    tier: control-plane
+  ports:
+    - port: 6443
