--- a/kubernetes/apps/download/qui/ks.yaml
+++ b/kubernetes/apps/download/qui/ks.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app qui
+  namespace: &namespace download
 spec:
   components:
     - ../../../../components/volsync
@@ -21,4 +22,5 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: *namespace
   wait: false
