--- a/kubernetes/apps/observability/blackbox-exporter/internal/kustomization.yaml
+++ b/kubernetes/apps/observability/blackbox-exporter/internal/kustomization.yaml
@@ -3,5 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helmrelease.yaml
-  - probes.yaml
+  - ./helmrelease.yaml
+  - ./ocirepository.yaml
+  - ./probes.yaml
