--- a/kubernetes/apps/observability/blackbox-exporter/iot/probes.yaml
+++ b/kubernetes/apps/observability/blackbox-exporter/iot/probes.yaml
@@ -1,9 +1,10 @@
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/monitoring.coreos.com/probe_v1.json
 ---
-kind: Probe
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/monitoring.coreos.com/probe_v1.json
 apiVersion: monitoring.coreos.com/v1
+kind: Probe
 metadata:
-  name: devices
+  name: icmp-iot
 spec:
   module: icmp
   prober:
