chore: ESPHome PVC isnt working for some reason

--- a/kubernetes/apps/home/esphome/app/helmrelease.yaml
+++ b/kubernetes/apps/home/esphome/app/helmrelease.yaml
@@ -64,12 +64,7 @@ spec:
             sectionName: https
     persistence:
       config:
-        existingClaim: *app
-        advancedMounts:
-          esphome:
-            main:
-              - path: /config
-                subPath: config
+        existingClaim: "{{ .Release.Name }}"
       tmpfs:
         type: emptyDir
         advancedMounts:
