--- a/kubernetes/apps/media/audiobookshelf/app/helmrelease.yaml
+++ b/kubernetes/apps/media/audiobookshelf/app/helmrelease.yaml
@@ -65,5 +65,5 @@ spec:
                 subPath: metadata
       data:
         type: nfs
-        server: 172.16.1.10
+        server: truenas.internal
         path: /mnt/BigPool/Media
