--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -75,7 +75,7 @@ spec:
           - path: /config
       media:
         type: nfs
-        server: 172.16.1.10
+        server: truenas.internal
         path: /mnt/BigPool/Media
         globalMounts:
           - path: /media
