--- a/kubernetes/apps/media/tdarr/node-gpu/helmrelease.yaml
+++ b/kubernetes/apps/media/tdarr/node-gpu/helmrelease.yaml
@@ -60,13 +60,13 @@ spec:
             subPath: logs
       media:
         type: nfs
-        server: 172.16.1.10
+        server: truenas.internal
         path: /mnt/BigPool/Media
         globalMounts:
           - path: /media
       temp:
         type: nfs
-        server: 172.16.1.10
+        server: truenas.internal
         path: /mnt/Scratch/Tdarr
         globalMounts:
           - path: /temp
