--- a/kubernetes/apps/observability/kube-prometheus-stack/app/scrapeconfig.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/scrapeconfig.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   staticConfigs:
     - targets:
-        - truenas.int.noms.tv:9100
+        - truenas.internal:9100
         # - pikvm.internal:9100
   metricsPath: /metrics
   relabelings:
@@ -23,7 +23,7 @@ metadata:
 spec:
   staticConfigs:
     - targets:
-        - truenas.int.noms.tv:9633
+        - truenas.internal:9633
   metricsPath: /metrics
   relabelings:
     - action: replace
