--- a/kubernetes/apps/download/ipupdater/ks.yaml
+++ b/kubernetes/apps/download/ipupdater/ks.yaml
@@ -4,14 +4,13 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app ipupdater
-  namespace: &namespace media
+  namespace: &namespace download
 spec:
-  commonMetadata:
-    labels:
-      app.kubernetes.io/name: *app
   components:
     - ../../../../components/volsync
   dependsOn:
+    - name: multus-networks
+      namespace: kube-system
     - name: volsync
       namespace: volsync-system
   interval: 30m
