fix: Set Keys via Envar

--- a/kubernetes/apps/download/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/download/sabnzbd/app/helmrelease.yaml
@@ -23,6 +23,9 @@ spec:
               SABNZBD__PORT: &port 80
               SABNZBD__HOST_WHITELIST_ENTRIES: sabnzbd.noms.tv
               TZ: America/New_York
+            envFrom:
+              - secretRef:
+                  name: "{{ .Release.Name }}-secret"
             probes:
               liveness: &probes
                 enabled: true
