--- a/kubernetes/apps/download/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/download/sabnzbd/app/helmrelease.yaml
@@ -21,7 +21,7 @@ spec:
               tag: 4.5.3@sha256:ecb57bd6257fbfbd9aee70d8ef3df8814b7270ae793fd1f44219ae73cacd519a
             env:
               SABNZBD__PORT: &port 80
-              SABNZBD__HOST_WHITELIST_ENTRIES: sabnzbd.noms.tv
+              SABNZBD__HOST_WHITELIST_ENTRIES: sabnzbd.noms.tv, sabnzbd.download
               TZ: America/New_York
             envFrom:
               - secretRef:
