--- a/kubernetes/apps/download/seedboxapi/app/externalsecret.yaml
+++ b/kubernetes/apps/download/seedboxapi/app/externalsecret.yaml
@@ -3,16 +3,16 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: ipupdater
+  name: seedboxapi-secret
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: ipupdater
+    name: seedboxapi-secret
     template:
       data:
-        ID: "{{ .ID }}"
+        mam_id: "{{ .ID }}"
   dataFrom:
     - extract:
         key: MAM
