--- a/kubernetes/apps/download/seedboxapi/ks.yaml
+++ b/kubernetes/apps/download/seedboxapi/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app ipupdater
+  name: &app seedboxapi
   namespace: &namespace download
 spec:
   components:
@@ -14,7 +14,7 @@ spec:
     - name: volsync
       namespace: volsync-system
   interval: 30m
-  path: ./kubernetes/apps/download/ipupdater/app
+  path: ./kubernetes/apps/download/seedboxapi/app
   postBuild:
     substitute:
       APP: *app
