--- a/kubernetes/apps/download/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/download/qbittorrent/app/helmrelease.yaml
@@ -100,10 +100,10 @@ spec:
       media:
         type: nfs
         server: truenas.internal
-        path: /mnt/BigPool/Media
+        path: /mnt/BigPool/Media/Downloads
         globalMounts:
           - path: /media/Downloads/Complete
-            subPath: Downloads
+            subPath: QBitorrent
       scratch:
         type: nfs
         server: truenas.internal
