--- a/kubernetes/apps/download/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/download/qbittorrent/app/helmrelease.yaml
@@ -109,7 +109,7 @@ spec:
         path: /mnt/Scratch/Downloads
         globalMounts:
           - path: /media/Downloads/Incomplete
-            subPath: QBitorrent
+            subPath: QBittorrent
       qbrr:
         type: image
         image: ghcr.io/buroa/qbrr:0.1.1@sha256:fe4a1d100ba896999253a5122d9c77cc4920779d618c23f765458cb6ec7383ca
