--- a/kubernetes/apps/databases/cloudnative-pg/clusters/main/kustomization.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/main/kustomization.yaml
@@ -3,5 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - externalsecret.yaml
-  - cluster.yaml
+  - ./cluster.yaml
+  - ./externalsecret.yaml
+  - ./objectstore.yaml
+  - ./scheduled-backup.yaml
