--- a/kubernetes/apps/media/sonarr/ks.yaml
+++ b/kubernetes/apps/media/sonarr/ks.yaml
@@ -11,6 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../components/cnpg/overlay/init
+    - ../../../../components/cnpg/database
     - ../../../../components/volsync
   dependsOn:
     - name: volsync
