fix: Wrong cluster name?

--- a/kubernetes/components/cnpg/database/database.yaml
+++ b/kubernetes/components/cnpg/database/database.yaml
@@ -8,6 +8,6 @@ metadata:
     app: ${APP}-db
 spec:
   cluster:
-    name: "${CNPG_CLUSTER:=main}"
+    name: "${CNPG_CLUSTER:=main-db}"
   name: ${APP}
   owner: "${CNPG_DB_OWNER:=app}"
