--- a/kubernetes/apps/databases/cloudnative-pg/clusters/main/databases/wikijs.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/main/databases/wikijs.yaml
@@ -3,11 +3,11 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Database
 metadata:
-  name: sonarr
+  name: wikijs
   labels:
-    app: sonarr
+    app: wikijs
 spec:
   cluster:
     name: main-db
-  name: sonarr
+  name: wikijs
   owner: app
