--- a/kubernetes/apps/databases/cloudnative-pg/clusters/main/databases/kustomization.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/main/databases/kustomization.yaml
@@ -3,4 +3,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./authentik.yaml
+  - ./gitea.yaml
+  - ./linkwarden.yaml
+  - ./lubelogger.yaml
+  - ./mealie.yaml
+  - ./paperless.yaml
+  - ./prowlarr.yaml
+  - ./radarr.yaml
   - ./sonarr.yaml
+  - ./wikijs.yaml
