--- a/kubernetes/apps/databases/cloudnative-pg/clusters/main/databases/prowlarr.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/main/databases/prowlarr.yaml
@@ -3,11 +3,11 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Database
 metadata:
-  name: sonarr
+  name: prowlarr
   labels:
-    app: sonarr
+    app: prowlarr
 spec:
   cluster:
     name: main-db
-  name: sonarr
+  name: prowlarr
   owner: app
