--- a/kubernetes/apps/media/sonarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/sonarr/app/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
       engineVersion: v2
       data:
         SONARR__AUTH__APIKEY: "{{ .SonarrAPIKey }}"
-        SONARR__POSTGRES__HOST: sonarr-db-rw
+        SONARR__POSTGRES__HOST: main-db-rw.databases
         SONARR__POSTGRES__PORT: "5432"
         SONARR__POSTGRES__USER: "{{ .appUser }}"
         SONARR__POSTGRES__PASSWORD: "{{ .appPassword }}"
